fixed particles not showing on hero image

--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -3,6 +3,10 @@
   height: 100vh;
   overflow: hidden;
 
+  & canvas  {
+    position: relative;
+  }
+
   &__image img {
     position: absolute;
     top: 0;
